Add reset functionality for pipelines in "Pipeline for Hope"; implement reset button and logic to clear placed pipes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <img src="images/JerryCan.png" alt="Straight Pipe" class="pipe-img" id="currentPipe">
       </div>
       <button id="skipPipeBtn" type="button">Skip Pipe</button>
+      <button id="resetPipesBtn" type="button">Reset Pipelines</button>
       
       <div class="bucket-container">
         <div class="bucket">
